new Integer() deprecation